--- a/crashviewer/src/main/res/navigation/main_nav.xml
+++ b/crashviewer/src/main/res/navigation/main_nav.xml
@@ -12,6 +12,6 @@
         android:id="@+id/fragment_crash_detail"
         android:name="com.github.boybeak.crashviewer.ui.main.CrashDetailFragment"
         >
-        <argument android:name="crash_id" app:argType="string"/>
+        <argument android:name="crash_id" app:argType="int"/>
     </fragment>
 </navigation>
